--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="en-ca">
-  <head>
-    <meta charset="utf-8">
-    <title>Planets</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="css/main.css" rel="stylesheet">
-  </head>
-  <body>
-    <header>
-      <nav>
-        <div>
-          <h1>Planets</h1>
-          <ul>
-            <li><a href="">Introduction</a></li>
-            <li><a href="">Terrestrial planets</a></li>
-            <li><a href="">Mars</a></li>
-            <li><a href="">Venus</a></li>
-          </ul>
-        </div>
-      </nav>
-    </header>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Planets</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Bevan" rel="stylesheet">
+
+</head>
+<body class="box">
+  <header>
+    <nav>
+      <div>
+        <h1>Planets</h1>
+        <ul>
+          <li><a href="">Introduction</a></li>
+          <li><a href="">Terrestrial planets</a></li>
+          <li><a href="">Mars</a></li>
+          <li><a href="">Venus</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+</body>
 </html>
